# raytrace

./: CMakeLists.txt  Makefile  README.md
include/: common.h
src/: main.c  main.cpp
